# s317264-computational-intelligence-labs

./: .gitignore  LICENSE  README.md  pyproject.toml
halloween/: Halloween.ipynb  pyproject.toml
lab1/: a-star.ipynb
lab10/: README.md  lab10.ipynb  pyproject.toml
lab2/: READ_ME.md  lab2_nim_.ipynb  lab2_nim_adaptive.ipynb
lab9/: READ_ME.md  lab9.ipynb
quixo/: README.md  board.py  enhanced_game.py  game.py  main.py  players.py
set-covering/: a-star.ipynb  a-start.ipynb  pyproject.toml
